--- a/statistics.html
+++ b/statistics.html
@@ -55,7 +55,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oYrAafwT&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=nPkHTKwY'>Premier Research Careers - Senior Biostatistician</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qngaVfws&k=Job&j=oYrAafwT&__jvst=Employee+Referral&__jvsd=sUzQygwC&__jvsc=Twitter&bid=nPkHTKwY'>Premier Research Careers - Senior Biostatistician</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -117,7 +117,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light">Madrid</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/premier-research/job/ofqAafw9'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/premier-research/job/ofqAafw9'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -145,7 +145,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light">Madrid</span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/premier-research/job/ofqAafw9'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/premier-research/job/ofqAafw9'>Premier Research Careers - Principal Biostatistical Programmer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-20</p>
 <hr/>
@@ -191,7 +191,7 @@ and ... and a good understanding of conversion data structure standards (SDTM)
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
-<h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/B3C1AB4B89'>Statistics &amp; Data Corporation (SDC) - Jobs: Manager of Biostatistics - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://statistics-and-data-corporation-sdc.workable.com/j/B3C1AB4B89'>Statistics &amp; Data Corporation (SDC) - Jobs: Manager of Biostatistics - Apply online</a></h5> 
 <p><span class="badge badge-light">Waltham, Massachusetts</span></p>
 <p>Posted on: 2019-07-19</p>
 <hr/>
@@ -228,7 +228,7 @@ statistical aspects of study design and analysis of data from complex...</p>
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/prosidianconsulting/743999691968708-ppm-data-scientist-statistician-ii-co'>ProSidian Consulting, LLC PPM Data Scientist/Statistician II - CO | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/prosidianconsulting/743999691968708-ppm-data-scientist-statistician-ii-co'>ProSidian Consulting, LLC PPM Data Scientist/Statistician II - CO | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-07-18</p>
 <hr/>
@@ -249,7 +249,7 @@ statistical aspects of study design and analysis of data from complex...</p>
 <p>6 days ago ... Demonstrate expert knowledge and understanding of analysis data structure 
 standards (ADaM) and a good understanding of conversion data structure?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999691567446-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/PSICRO/743999691567446-senior-statistician'>PSI CRO Senior Statistician | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-17</p>
 <hr/>
@@ -330,7 +330,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p>Jul 4, 2019 ... Serves as an independent reporting statistician on data monitoring committees. 
 Develops statistical analysis plans and reporting specifications for simple to?...</p>
 <hr/>
-<h5><a href='https://uscareers-prahs.icims.com/jobs/54112/senior-statistical-programmer/job'>Senior Statistical Programmer in</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://uscareers-prahs.icims.com/jobs/54112/senior-statistical-programmer/job'>Senior Statistical Programmer in</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 4, 2019 ... Senior Statistical Programmer. Overview: Provides statistical programming 
 support for the implementation of data models and the reporting of clinical trials?...</p>
@@ -345,11 +345,11 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-12</p>
 <hr/>
-<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-30016'>Sr Biostatistician - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-biostatistician-30016'>Sr Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-statistical-programmer-30008'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
+<h5><a href='https://incresearch.referrals.selectminds.com/jobs/sr-statistical-programmer-30008'>Sr Statistical Programmer - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-11</p>
 <hr/>
@@ -389,7 +389,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light">Waltham, MA</span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/sr-biostatistician-29940'>Sr Biostatistician - Syneos Health Careers</a></h5> 
+<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/sr-biostatistician-29940'>Sr Biostatistician - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-08</p>
 <hr/>
@@ -409,7 +409,7 @@ support for the implementation of data models and the reporting of clinical tria
 <p><span class="badge badge-light">North America North America North America Canada</span></p>
 <p>Posted on: 2019-07-04</p>
 <hr/>
-<h5><a href='https://glpg.recruitee.com/o/team-leader-biostatistics'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://glpg.recruitee.com/o/team-leader-biostatistics'>
       Team Leader Biostatistics - Galapagos
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
